--- a/.env
+++ b/.env
@@ -1,3 +1,13 @@
-WINDOW_SIZE=3000 #number of timesteps in one sample
-NUM_VARIABLES=1 #number of channels
-NUM_CLASSES=10 #acivities
+WINDOW_SIZE =3000 #number of timesteps in one sample
+NUM_VARIABLES =1 #number of channels
+NOISE_DIM =128
+NUM_CLASSES =2 #acivities
+BATCH_SIZE =32
+
+LR_G =0.0001
+LR_D = 0.0001
+
+GP_WEIGHT = 10.0
+CRITIC_ITERATIONS = 5
+
+DEVICE = 'cuda' if torch.cuda.is_available() else 'cpu'
